--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: chip_list
-description: A new Flutter package project.
+description: Makes creating a list of ChoiceChip-s a breeze. Super customizable as well.
 version: 0.0.1
-homepage:
+homepage: https://github.com/bossbeagle1509/chip_list
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
