--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: chip_list
 description: Makes creating a list of ChoiceChip-s a breeze. Super customizable as well.
-version: 3.4.4+8
+version: 3.0.0
 homepage: https://github.com/bossbeagle1509/chip_list
 
 environment:
@@ -14,6 +14,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.1
+  flutter_lints: ^4.0.0
 
 flutter:
